--- a/test/index.htm
+++ b/test/index.htm
@@ -3,7 +3,6 @@
 <html>
 <head>
   <title>dom-bind tests!</title>
-  <script src='bundle.js'></script>
 </head>
 <body>
   <div>
@@ -39,7 +38,10 @@
         <a href='#' data-val='4'><span></span></a>
       </div> 
     </div>
+    <div id='once'></div>
+    <div id='once_c'></div>
   </div>
   <p>(results in console)</p>
+  <script src='bundle.js'></script>
 </body>
 </html>
